--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -52,6 +52,8 @@ if (defined(ohos_lite)) {
       }
       include_dirs = [
         "ipc/small_system/include",
+        "lnn/lane_hub/lane_manager/include",
+        "lnn/lane_hub/time_sync/include",
         "lnn/net_builder/include",
         "lnn/net_builder/sync_info/include",
         "lnn/net_ledger/common/include",
@@ -97,7 +99,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
         "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
         "$hilog_lite_deps_path",
-        "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
+        "lnn/lane_hub:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
         "monitor:dsoftbus_bus_center_monitor",
         "utils:dsoftbus_bus_center_utils",
@@ -132,6 +134,8 @@ if (defined(ohos_lite)) {
     }
     include_dirs = [
       "ipc/standard_system/include",
+      "lnn/lane_hub/lane_manager/include",
+      "lnn/lane_hub/time_sync/include",
       "lnn/net_builder/include",
       "lnn/net_builder/sync_info/include",
       "lnn/net_ledger/common/include",
@@ -172,7 +176,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
-      "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
+      "lnn/lane_hub:dsoftbus_bus_center_hub",
       "lnn/net_ledger:dsoftbus_bus_center_ledger",
       "monitor:dsoftbus_bus_center_monitor",
       "utils:dsoftbus_bus_center_utils",
