--- a/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -44,7 +44,6 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
-      "$dsoftbus_root_path/core/common/security:softbus_crypto",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$hilog_lite_deps_path",
       "$libsec_deps_path",
@@ -64,7 +63,6 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//third_party/cJSON",
-    "//third_party/mbedtls/include/mbedtls",
     "$hilog_lite_include_path",
     "$libsec_include_path",
   ]
@@ -106,22 +104,18 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/bus_center",
       "$dsoftbus_root_path/core/authentication/interface",
       "$dsoftbus_root_path/core/transmission/session/include",
-      "//third_party/mbedtls/include/mbedtls/",
-      "//third_party/mbedtls/include",
     ]
     sources = common_src
     public_configs = [ ":trans_udp_channel_interface" ]
 
     deps = [
-      "$dsoftbus_core_path/common/security:softbus_crypto",
       "$dsoftbus_core_path/common/utils:softbus_utils",
       "$dsoftbus_core_path/connection/common:conn_common",
       "$dsoftbus_core_path/transmission/common:dsoftbus_trans_common",
       "$dsoftbus_core_path/transmission/ipc:dsoftbus_trans_ipc_proxy",
-      "$dsoftbus_root_path/components/mbedtls:mbedtls_shared",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
-      "$dsoftbus_root_path/core/common/security:softbus_crypto",
       "//third_party/cJSON:cjson_static",
     ]
     if (is_standard_system) {
