--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -34,6 +34,7 @@ if (defined(ohos_lite)) {
   common_deps = [
     "$hilog_lite_deps_path",
     "$libsec_deps_path",
+    "//third_party/bounds_checking_function:libsec_shared",
   ]
 
   if (ohos_kernel_type == "liteos_m") {
@@ -42,6 +43,7 @@ if (defined(ohos_lite)) {
       include_dirs += [ "//kernel/liteos_m/kal/cmsis" ]
       cflags = [ "-Wall" ]
       sources = [
+        "$softbus_adapter_common/bus_center/platform/bus_center_adapter_weak.c",
         "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_file.c",
         "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_mem.c",
         "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_timer.c",
@@ -60,6 +62,7 @@ if (defined(ohos_lite)) {
         "-fPIC",
       ]
       sources = [
+        "$softbus_adapter_common/bus_center/platform/bus_center_adapter_weak.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
@@ -85,10 +88,14 @@ if (defined(ohos_lite)) {
 
   ohos_shared_library("softbus_adapter") {
     include_dirs = [
+      "$dsoftbus_root_path/interfaces/kits",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
       "//third_party/mbedtls/include",
       "//utils/native/base/include",
     ]
     sources = [
+      "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
@@ -98,6 +105,8 @@ if (defined(ohos_lite)) {
     ]
     public_deps = [
       "$dsoftbus_root_path/components/mbedtls:mbedtls_shared",
+      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
+      "//third_party/bounds_checking_function:libsec_static",
       "//utils/native/base:utils",
     ]
     public_configs = [ ":config_adapter_common" ]
