--- a/sdk/transmission/session/BUILD.gn
+++ b/sdk/transmission/session/BUILD.gn
@@ -25,6 +25,7 @@ if (defined(ohos_lite)) {
     "include",
     "$softbus_adapter_common/include",
     "$dsoftbus_core_path/common/include",
+    "$dosftbus_root_path/interfaces/inner_kits/transport",
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_sdk_path/frame/common/include",
@@ -66,6 +67,7 @@ if (defined(ohos_lite)) {
   import("//build/ohos.gni")
   config("trans_session_sdk_interface") {
     include_dirs = [
+      "$dosftbus_root_path/interfaces/inner_kits/transport",
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
       "$dsoftbus_root_path/interfaces/kits/bus_center",
