--- a/core/transmission/session/BUILD.gn
+++ b/core/transmission/session/BUILD.gn
@@ -41,6 +41,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
     "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
     "//third_party/cJSON",
     "$libsec_include_path",
     "$hilog_lite_include_path",
@@ -117,6 +118,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
       "$dsoftbus_root_path/core/bus_center/utils/include",
       "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
       "//third_party/cJSON",
     ]
     sources = [
