--- a/core/bus_center/lnn/lane_hub/BUILD.gn
+++ b/core/bus_center/lnn/lane_hub/BUILD.gn
@@ -37,6 +37,7 @@ if (defined(ohos_lite)) {
         "lane_manager/include",
         "time_sync/include",
         "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+        "$dsoftbus_root_path/core/bus_center/service/include",
         "$softbus_adapter_common/include",
         "$dsoftbus_root_path/core/common/include",
         "//third_party/bounds_checking_function/include",
@@ -58,10 +59,16 @@ if (defined(ohos_lite)) {
         "//third_party/bounds_checking_function:libsec_shared",
       ]
       if (enable_time_sync == true) {
-        sources += [
-          "time_sync/src/lnn_time_sync_manager.c",
-          "time_sync/src/lnn_time_sync_impl_stub.c",
-        ]
+        sources += [ "time_sync/src/lnn_time_sync_manager.c" ]
+        native_source_path = rebase_path("$dsoftbus_root_path")
+        dep_file = "enhanced/core/bus_center/lnn/lane_hub/time_sync/BUILD.gn"
+        enhanced = exec_script("//build/lite/run_shell_cmd.py",
+          [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ], "value")
+        if (enhanced) {
+          deps += [ "$dsoftbus_root_path/enhanced/core/bus_center/lnn/lane_hub/time_sync:lnn_time_sync_impl" ]
+        } else {
+          sources += [ "time_sync/src/lnn_time_sync_impl_stub.c" ]
+        }
         include_dirs += [
           "$dsoftbus_root_path/core/adapter/bus_center/include/",
           "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
@@ -88,6 +95,7 @@ if (defined(ohos_lite)) {
       "lane_manager/include",
       "time_sync/include",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+      "$dsoftbus_root_path/core/bus_center/service/include",
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/common/include",
       "//utils/native/base/include",
@@ -99,10 +107,16 @@ if (defined(ohos_lite)) {
       "//utils/native/base:utils",
     ]
     if (enable_time_sync == true) {
-      sources += [
-        "time_sync/src/lnn_time_sync_manager.c",
-        "time_sync/src/lnn_time_sync_impl_stub.c",
-      ]
+      sources += [ "time_sync/src/lnn_time_sync_manager.c" ]
+      native_source_path = rebase_path("$dsoftbus_root_path")
+      dep_file = "enhanced/core/bus_center/lnn/lane_hub/time_sync/BUILD.gn"
+      enhanced = exec_script("//build/lite/run_shell_cmd.py",
+        [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ], "value")
+      if (enhanced) {
+        deps += [ "$dsoftbus_root_path/enhanced/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
+      } else {
+        sources += [ "time_sync/src/lnn_time_sync_impl_stub.c" ]
+      }
       include_dirs += [
         "$dsoftbus_root_path/core/adapter/bus_center/include/",
         "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
