--- a/core/transmission/session/BUILD.gn
+++ b/core/transmission/session/BUILD.gn
@@ -51,6 +51,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
     "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub:dsoftbus_bus_center_hub",
     "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
     "$dsoftbus_root_path/core/common/log:softbus_log",
     "$dsoftbus_root_path/core/transmission/ipc:dsoftbus_trans_ipc_proxy",
@@ -141,6 +142,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+      "$dsoftbus_root_path/core/bus_center/lnn/lane_hub:dsoftbus_bus_center_hub",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/log:softbus_log",
