Description:modify time sync impl name for L1 Feature or Bugfix:Feature Binary Source: No
Signed-off-by: fanxiaoyu <fanxiaoyu3@huawei.com>

--- a/core/bus_center/lnn/lane_hub/BUILD.gn
+++ b/core/bus_center/lnn/lane_hub/BUILD.gn
@@ -67,7 +67,7 @@ if (defined(ohos_lite)) {
                 [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ],
                 "value")
         if (enhanced) {
-          deps += [ "$dsoftbus_root_path/enhanced/core/bus_center/lnn/lane_hub/time_sync:lnn_time_sync_impl" ]
+          deps += [ "$dsoftbus_root_path/enhanced/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
         } else {
           sources += [ "time_sync/src/lnn_time_sync_impl_stub.c" ]
         }
