lnn offline notify tran
Signed-off-by: zhufenghao <2581725389@qq.com>

--- a/sdk/transmission/BUILD.gn
+++ b/sdk/transmission/BUILD.gn
@@ -28,6 +28,9 @@ common_include = [
   "$softbus_adapter_common/include",
   "$dsoftbus_root_path/interfaces/kits/transport",
   "$dsoftbus_sdk_path/transmission/trans_channel/auth/include",
+  "$dsoftbus_root_path/interfaces/kits/bus_center",
+  "$dsoftbus_root_path/interfaces/kits/common",
+  "$dsoftbus_sdk_path/bus_center/manager/include",
 ]
 
 common_src = [
