--- a/sdk/transmission/BUILD.gn
+++ b/sdk/transmission/BUILD.gn
@@ -51,6 +51,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_core_path/common/utils:softbus_utils",
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common/log:softbus_log",
+    "$dsoftbus_sdk_path/bus_center:dsoftbus_bus_center_manager_sdk",
     "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
     "$dsoftbus_sdk_path/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel_sdk",
     "$dsoftbus_sdk_path/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel_sdk",
@@ -88,6 +89,7 @@ if (defined(ohos_lite)) {
     public_deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_sdk_path/bus_center:dsoftbus_bus_center_manager_sdk",
       "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
       "$dsoftbus_sdk_path/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel_sdk",
       "$dsoftbus_sdk_path/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel_sdk",
